# edu-applications-bot

./: pyproject.toml  requirements.txt
bot/: __main__.py  app.py  loader.py
bot/handlers/commands/: application.py  start.py
bot/keyboards/default/: application.py
database/: connection.py
database/dao/: holder.py
database/dao/rdb/: __init__.py  ad.py  application.py  base.py  course.py  user.py
database/dto/: __init__.py  ad.py  application.py  course.py  user.py
database/migrations/: env.py
database/migrations/versions/: 271fd292522b_create_all_models.py
database/models/: __init__.py  ad.py  application.py  course.py  user.py
