[tool.poetry]
name = "devboys edu's bot"
version = "0.1.0"
description = "DevBoys EDU's referral, suggestions and support bot"
authors = ["Murtazo <murtazox04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
sqlalchemy = "^2.0.20"
python-decouple = "^3.8"
fastapi = "^0.103.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
